force-app/main/default/objects/Person__c/fields/All_Time_Course_Count__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Course_Count__c</fullName>
    <description>The number of all courses that the current student is
participating in</description>
    <label>All-Time Course Count</label>
    <summaryForeignKey>Course_Participation__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>