force-app/main/default/objects/Person__c/fields/Course_Credits__c.field-meta.xml
<CustomField>
    <fullName>Course_Credits__c</fullName>
    <label>Course Credits</label>
    <summarizedField>Course_Participation__c.Course_Credit__c</summarizedField>
    <summaryForeignKey>Course_Participation__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>