force-app/main/default/objects/Person__c/fields/Outstanding_Credits__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Credits__c</fullName>
    <description>The credits left before being able to graduate (Passing Credit -
Course Credits)</description>
    <formula>Passing_Credit_Threshold__c -    Course_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>