force-app/main/default/objects/Person__c/fields/Passing_Credit_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Passing_Credit_Threshold__c</fullName>
    <defaultValue>$CustomMetadata.Threshold__mdt.Threshold_Record.Credit_Threshold__c</defaultValue>
    <description>The amount of credit needed to graduate</description>
    <label>Passing Credit Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>