force-app/main/default/objects/Person__c/fields/Passing_Score_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Passing_Score_Threshold__c</fullName>
    <defaultValue>$CustomMetadata.Threshold__mdt.Threshold_Record.Score_Threshold__c</defaultValue>
    <description>The amount of score needed to graduate</description>
    <label>Passing Score Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>