force-app/main/default/objects/Person__c/fields/Solutions_Count__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Count__c</fullName>
    <label>Solutions Count</label>
    <summaryForeignKey>Solution__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>