force-app/main/default/objects/Person__c/recordTypes/Tutor.recordType-meta.xml
<RecordType>
    <fullName>Tutor</fullName>
    <active>true</active>
    <label>Tutor</label>
</RecordType>