force-app/main/default/objects/Person__c/listViews/All_Tutors.listView-meta.xml
<ListView>
    <fullName>All_Tutors</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Years_of_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Person__c.Tutor</value>
    </filters>
    <label>All Tutors</label>
</ListView>